--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3308/Gira
 spring.datasource.username=root
 spring.datasource.password=admin123
+
+jwt.secret.key=RP/ymRacOIQ2snSlTOHtLH9QqwRWEP/CT3OaJfowuaE=
